// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout/SensorsList Default 1`] = `
<table
  className="w-full text-left"
>
  <thead
    className="font-normal"
  >
    <tr
      className="border-b border-gray-200 mb-4 py-4 sm:py-0 whitespace-nowrap w-auto block align-top sm:table-cell grid gap-2 sm:gap-0 sm:table-row"
    >
      <th
        className="pl-0 sm:py-3 sm:pr-3 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
      >
        Gerät-ID
      </th>
      <th
        className="w-full sm:py-3 sm:pr-3 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
      >
        Anzeigename
      </th>
      <th
        className="sm:py-3 sm:pr-3 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
      >
        Letztes Signal
      </th>
      <th
        className="sm:py-3 sm:pr-3 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
      />
      <th
        className="pr-0 sm:py-3 sm:pr-3 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
      />
    </tr>
  </thead>
  <tbody>
    <tr
      className="transition hover:bg-blue-25 cursor-pointer py-4 sm:py-0 whitespace-nowrap w-auto block align-top sm:table-cell grid gap-2 sm:gap-0 sm:table-row"
      onClick={[Function]}
      style={
        Object {
          "gridTemplateAreas": "
      'id         name'
      'lastSeen   lastSeen'
      'button1    button2'
    ",
          "gridTemplateColumns": "auto 1fr",
        }
      }
    >
      <td
        className="font-bold sm:font-normal pl-0 sm:py-3 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
        style={
          Object {
            "gridArea": "id",
            "minWidth": "20vw",
          }
        }
      >
        <svg
          className="inline-block mr-3 sm:ml-2"
          fill="none"
          height="15"
          viewBox="0 0 21 15"
          width="21"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.5579 0.234604C17.2312 -0.0782013 16.7015 -0.0782013 16.3749 0.234604C16.0483 0.547462 16.0483 1.05467 16.3749 1.36753C18.0776 2.9981 19.0154 5.16771 19.0154 7.4766C19.0154 9.78549 18.0777 11.955 16.3749 13.5857C16.0482 13.8985 16.0482 14.4057 16.3749 14.7186C16.7015 15.0313 17.2311 15.0315 17.5579 14.7186C19.5766 12.7854 20.6884 10.2134 20.6884 7.47655C20.6884 4.73965 19.5766 2.16778 17.5579 0.234604Z"
            fill="#1E3791"
            opacity="0.5"
          />
          <path
            d="M14.9855 2.68702C14.6591 2.37581 14.1298 2.37581 13.8034 2.68702C13.477 2.99828 13.477 3.50295 13.8034 3.81416C14.8287 4.79173 15.3934 6.09257 15.3934 7.47694C15.3934 8.86131 14.8287 10.1621 13.8034 11.1397C13.477 11.4509 13.477 11.9556 13.8034 12.2669C14.1298 12.5781 14.659 12.5782 14.9855 12.2669C16.3266 10.9882 17.0651 9.28707 17.0651 7.47689C17.0651 5.6667 16.3266 3.9657 14.9855 2.68702Z"
            fill="#1E3791"
            opacity="0.75"
          />
          <path
            d="M1.67299 7.47658C1.67299 5.1677 2.6107 2.99816 4.31348 1.36754C4.64015 1.05468 4.64015 0.54748 4.31348 0.234623C3.98685 -0.0782342 3.45718 -0.0781809 3.1305 0.234623C1.11176 2.16779 0 4.73975 0 7.47658C0 10.2134 1.11176 12.7854 3.1305 14.7186C3.45763 15.0318 3.98724 15.031 4.31348 14.7186C4.6401 14.4057 4.6401 13.8985 4.31348 13.5857C2.6107 11.9551 1.67299 9.78546 1.67299 7.47658Z"
            fill="#1E3791"
            opacity="0.5"
          />
          <path
            d="M6.88525 2.68706C6.55888 2.3758 6.0296 2.3758 5.70317 2.68706C4.36211 3.96572 3.62354 5.6668 3.62354 7.47697C3.62354 9.28713 4.36211 10.9882 5.70317 12.2669C6.03005 12.5785 6.55927 12.5777 6.88525 12.2669C7.21169 11.9556 7.21163 11.451 6.88525 11.1398C5.85992 10.1622 5.29527 8.86137 5.29527 7.47702C5.29527 6.09267 5.85992 4.79185 6.88525 3.81429C7.21163 3.50298 7.21163 2.99832 6.88525 2.68706Z"
            fill="#1E3791"
            opacity="0.75"
          />
          <path
            d="M10.0524 3.97217C8.1189 3.97217 6.5459 5.54439 6.5459 7.47683C6.5459 9.40927 8.11895 10.9815 10.0524 10.9815C11.9859 10.9815 13.5589 9.40927 13.5589 7.47683C13.5589 5.54439 11.9859 3.97217 10.0524 3.97217Z"
            fill="#1E3791"
          />
        </svg>
        device-1
      </td>
      <td
        className="w-full sm:py-3 pl-8 sm:pl-0 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
        style={
          Object {
            "gridArea": "name",
          }
        }
      >
        Neo
      </td>
      <td
        className="italic text-gray-500 sm:py-3 pl-8 sm:pl-0 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
        style={
          Object {
            "gridArea": "lastSeen",
          }
        }
      >
        Vor ein paar Sekunden
      </td>
      <td
        className="sm:text-right sm:py-3 pl-8 sm:pl-0 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
        style={
          Object {
            "gridArea": "button1",
          }
        }
      >
        <button
          onClick={[Function]}
        >
          Bearbeiten
        </button>
      </td>
      <td
        className="sm:text-right pr-0 sm:py-3 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
        style={
          Object {
            "gridArea": "button2",
          }
        }
      >
        <button
          onClick={[Function]}
        >
          Löschen
        </button>
      </td>
    </tr>
    <tr
      className="transition hover:bg-blue-25 cursor-pointer py-4 sm:py-0 whitespace-nowrap w-auto block align-top sm:table-cell grid gap-2 sm:gap-0 sm:table-row"
      onClick={[Function]}
      style={
        Object {
          "gridTemplateAreas": "
      'id         name'
      'lastSeen   lastSeen'
      'button1    button2'
    ",
          "gridTemplateColumns": "auto 1fr",
        }
      }
    >
      <td
        className="font-bold sm:font-normal pl-0 sm:py-3 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
        style={
          Object {
            "gridArea": "id",
            "minWidth": "20vw",
          }
        }
      >
        <svg
          className="inline-block mr-3 sm:ml-2"
          fill="none"
          height="15"
          viewBox="0 0 21 15"
          width="21"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.5579 0.234604C17.2312 -0.0782013 16.7015 -0.0782013 16.3749 0.234604C16.0483 0.547462 16.0483 1.05467 16.3749 1.36753C18.0776 2.9981 19.0154 5.16771 19.0154 7.4766C19.0154 9.78549 18.0777 11.955 16.3749 13.5857C16.0482 13.8985 16.0482 14.4057 16.3749 14.7186C16.7015 15.0313 17.2311 15.0315 17.5579 14.7186C19.5766 12.7854 20.6884 10.2134 20.6884 7.47655C20.6884 4.73965 19.5766 2.16778 17.5579 0.234604Z"
            fill="#1E3791"
            opacity="0.5"
          />
          <path
            d="M14.9855 2.68702C14.6591 2.37581 14.1298 2.37581 13.8034 2.68702C13.477 2.99828 13.477 3.50295 13.8034 3.81416C14.8287 4.79173 15.3934 6.09257 15.3934 7.47694C15.3934 8.86131 14.8287 10.1621 13.8034 11.1397C13.477 11.4509 13.477 11.9556 13.8034 12.2669C14.1298 12.5781 14.659 12.5782 14.9855 12.2669C16.3266 10.9882 17.0651 9.28707 17.0651 7.47689C17.0651 5.6667 16.3266 3.9657 14.9855 2.68702Z"
            fill="#1E3791"
            opacity="0.75"
          />
          <path
            d="M1.67299 7.47658C1.67299 5.1677 2.6107 2.99816 4.31348 1.36754C4.64015 1.05468 4.64015 0.54748 4.31348 0.234623C3.98685 -0.0782342 3.45718 -0.0781809 3.1305 0.234623C1.11176 2.16779 0 4.73975 0 7.47658C0 10.2134 1.11176 12.7854 3.1305 14.7186C3.45763 15.0318 3.98724 15.031 4.31348 14.7186C4.6401 14.4057 4.6401 13.8985 4.31348 13.5857C2.6107 11.9551 1.67299 9.78546 1.67299 7.47658Z"
            fill="#1E3791"
            opacity="0.5"
          />
          <path
            d="M6.88525 2.68706C6.55888 2.3758 6.0296 2.3758 5.70317 2.68706C4.36211 3.96572 3.62354 5.6668 3.62354 7.47697C3.62354 9.28713 4.36211 10.9882 5.70317 12.2669C6.03005 12.5785 6.55927 12.5777 6.88525 12.2669C7.21169 11.9556 7.21163 11.451 6.88525 11.1398C5.85992 10.1622 5.29527 8.86137 5.29527 7.47702C5.29527 6.09267 5.85992 4.79185 6.88525 3.81429C7.21163 3.50298 7.21163 2.99832 6.88525 2.68706Z"
            fill="#1E3791"
            opacity="0.75"
          />
          <path
            d="M10.0524 3.97217C8.1189 3.97217 6.5459 5.54439 6.5459 7.47683C6.5459 9.40927 8.11895 10.9815 10.0524 10.9815C11.9859 10.9815 13.5589 9.40927 13.5589 7.47683C13.5589 5.54439 11.9859 3.97217 10.0524 3.97217Z"
            fill="#1E3791"
          />
        </svg>
        device-2
      </td>
      <td
        className="w-full sm:py-3 pl-8 sm:pl-0 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
        style={
          Object {
            "gridArea": "name",
          }
        }
      >
        Triniti
      </td>
      <td
        className="italic text-gray-500 sm:py-3 pl-8 sm:pl-0 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
        style={
          Object {
            "gridArea": "lastSeen",
          }
        }
      >
        Vor 3 Monaten
      </td>
      <td
        className="sm:text-right sm:py-3 pl-8 sm:pl-0 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
        style={
          Object {
            "gridArea": "button1",
          }
        }
      >
        <button
          onClick={[Function]}
        >
          Bearbeiten
        </button>
      </td>
      <td
        className="sm:text-right pr-0 sm:py-3 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
        style={
          Object {
            "gridArea": "button2",
          }
        }
      >
        <button
          onClick={[Function]}
        >
          Löschen
        </button>
      </td>
    </tr>
    <tr
      className="transition hover:bg-blue-25 cursor-pointer py-4 sm:py-0 whitespace-nowrap w-auto block align-top sm:table-cell grid gap-2 sm:gap-0 sm:table-row"
      onClick={[Function]}
      style={
        Object {
          "gridTemplateAreas": "
      'id         name'
      'lastSeen   lastSeen'
      'button1    button2'
    ",
          "gridTemplateColumns": "auto 1fr",
        }
      }
    >
      <td
        className="font-bold sm:font-normal pl-0 sm:py-3 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
        style={
          Object {
            "gridArea": "id",
            "minWidth": "20vw",
          }
        }
      >
        <svg
          className="inline-block mr-3 sm:ml-2"
          fill="none"
          height="15"
          viewBox="0 0 21 15"
          width="21"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.5579 0.234604C17.2312 -0.0782013 16.7015 -0.0782013 16.3749 0.234604C16.0483 0.547462 16.0483 1.05467 16.3749 1.36753C18.0776 2.9981 19.0154 5.16771 19.0154 7.4766C19.0154 9.78549 18.0777 11.955 16.3749 13.5857C16.0482 13.8985 16.0482 14.4057 16.3749 14.7186C16.7015 15.0313 17.2311 15.0315 17.5579 14.7186C19.5766 12.7854 20.6884 10.2134 20.6884 7.47655C20.6884 4.73965 19.5766 2.16778 17.5579 0.234604Z"
            fill="#1E3791"
            opacity="0.5"
          />
          <path
            d="M14.9855 2.68702C14.6591 2.37581 14.1298 2.37581 13.8034 2.68702C13.477 2.99828 13.477 3.50295 13.8034 3.81416C14.8287 4.79173 15.3934 6.09257 15.3934 7.47694C15.3934 8.86131 14.8287 10.1621 13.8034 11.1397C13.477 11.4509 13.477 11.9556 13.8034 12.2669C14.1298 12.5781 14.659 12.5782 14.9855 12.2669C16.3266 10.9882 17.0651 9.28707 17.0651 7.47689C17.0651 5.6667 16.3266 3.9657 14.9855 2.68702Z"
            fill="#1E3791"
            opacity="0.75"
          />
          <path
            d="M1.67299 7.47658C1.67299 5.1677 2.6107 2.99816 4.31348 1.36754C4.64015 1.05468 4.64015 0.54748 4.31348 0.234623C3.98685 -0.0782342 3.45718 -0.0781809 3.1305 0.234623C1.11176 2.16779 0 4.73975 0 7.47658C0 10.2134 1.11176 12.7854 3.1305 14.7186C3.45763 15.0318 3.98724 15.031 4.31348 14.7186C4.6401 14.4057 4.6401 13.8985 4.31348 13.5857C2.6107 11.9551 1.67299 9.78546 1.67299 7.47658Z"
            fill="#1E3791"
            opacity="0.5"
          />
          <path
            d="M6.88525 2.68706C6.55888 2.3758 6.0296 2.3758 5.70317 2.68706C4.36211 3.96572 3.62354 5.6668 3.62354 7.47697C3.62354 9.28713 4.36211 10.9882 5.70317 12.2669C6.03005 12.5785 6.55927 12.5777 6.88525 12.2669C7.21169 11.9556 7.21163 11.451 6.88525 11.1398C5.85992 10.1622 5.29527 8.86137 5.29527 7.47702C5.29527 6.09267 5.85992 4.79185 6.88525 3.81429C7.21163 3.50298 7.21163 2.99832 6.88525 2.68706Z"
            fill="#1E3791"
            opacity="0.75"
          />
          <path
            d="M10.0524 3.97217C8.1189 3.97217 6.5459 5.54439 6.5459 7.47683C6.5459 9.40927 8.11895 10.9815 10.0524 10.9815C11.9859 10.9815 13.5589 9.40927 13.5589 7.47683C13.5589 5.54439 11.9859 3.97217 10.0524 3.97217Z"
            fill="#1E3791"
          />
        </svg>
        device-3
      </td>
      <td
        className="w-full sm:py-3 pl-8 sm:pl-0 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
        style={
          Object {
            "gridArea": "name",
          }
        }
      >
        Morpheus
      </td>
      <td
        className="italic text-gray-500 sm:py-3 pl-8 sm:pl-0 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
        style={
          Object {
            "gridArea": "lastSeen",
          }
        }
      >
        —
      </td>
      <td
        className="sm:text-right sm:py-3 pl-8 sm:pl-0 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
        style={
          Object {
            "gridArea": "button1",
          }
        }
      >
        <button
          onClick={[Function]}
        >
          Bearbeiten
        </button>
      </td>
      <td
        className="sm:text-right pr-0 sm:py-3 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
        style={
          Object {
            "gridArea": "button2",
          }
        }
      >
        <button
          onClick={[Function]}
        >
          Löschen
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Layout/SensorsList Empty 1`] = `
<table
  className="w-full text-left"
>
  <thead
    className="font-normal"
  >
    <tr
      className="border-b border-gray-200 mb-4 py-4 sm:py-0 whitespace-nowrap w-auto block align-top sm:table-cell grid gap-2 sm:gap-0 sm:table-row"
    >
      <th
        className="pl-0 sm:py-3 sm:pr-3 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
      >
        Gerät-ID
      </th>
      <th
        className="w-full sm:py-3 sm:pr-3 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
      >
        Anzeigename
      </th>
      <th
        className="sm:py-3 sm:pr-3 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
      >
        Letztes Signal
      </th>
      <th
        className="sm:py-3 sm:pr-3 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
      />
      <th
        className="pr-0 sm:py-3 sm:pr-3 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
      />
    </tr>
  </thead>
  <tbody>
    <tr
      className="py-4 sm:py-0 whitespace-nowrap w-auto block align-top sm:table-cell grid gap-2 sm:gap-0 sm:table-row"
    >
      <td
        className="text-center align-middle sm:py-3 pl-8 sm:pl-0 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
        colSpan={5}
        style={
          Object {
            "height": "20vmax",
          }
        }
      >
        <button>
          <svg
            className="inline-block mr-3 sm:ml-2"
            fill="none"
            height="15"
            viewBox="0 0 21 15"
            width="21"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.5579 0.234604C17.2312 -0.0782013 16.7015 -0.0782013 16.3749 0.234604C16.0483 0.547462 16.0483 1.05467 16.3749 1.36753C18.0776 2.9981 19.0154 5.16771 19.0154 7.4766C19.0154 9.78549 18.0777 11.955 16.3749 13.5857C16.0482 13.8985 16.0482 14.4057 16.3749 14.7186C16.7015 15.0313 17.2311 15.0315 17.5579 14.7186C19.5766 12.7854 20.6884 10.2134 20.6884 7.47655C20.6884 4.73965 19.5766 2.16778 17.5579 0.234604Z"
              fill="#1E3791"
              opacity="0.5"
            />
            <path
              d="M14.9855 2.68702C14.6591 2.37581 14.1298 2.37581 13.8034 2.68702C13.477 2.99828 13.477 3.50295 13.8034 3.81416C14.8287 4.79173 15.3934 6.09257 15.3934 7.47694C15.3934 8.86131 14.8287 10.1621 13.8034 11.1397C13.477 11.4509 13.477 11.9556 13.8034 12.2669C14.1298 12.5781 14.659 12.5782 14.9855 12.2669C16.3266 10.9882 17.0651 9.28707 17.0651 7.47689C17.0651 5.6667 16.3266 3.9657 14.9855 2.68702Z"
              fill="#1E3791"
              opacity="0.75"
            />
            <path
              d="M1.67299 7.47658C1.67299 5.1677 2.6107 2.99816 4.31348 1.36754C4.64015 1.05468 4.64015 0.54748 4.31348 0.234623C3.98685 -0.0782342 3.45718 -0.0781809 3.1305 0.234623C1.11176 2.16779 0 4.73975 0 7.47658C0 10.2134 1.11176 12.7854 3.1305 14.7186C3.45763 15.0318 3.98724 15.031 4.31348 14.7186C4.6401 14.4057 4.6401 13.8985 4.31348 13.5857C2.6107 11.9551 1.67299 9.78546 1.67299 7.47658Z"
              fill="#1E3791"
              opacity="0.5"
            />
            <path
              d="M6.88525 2.68706C6.55888 2.3758 6.0296 2.3758 5.70317 2.68706C4.36211 3.96572 3.62354 5.6668 3.62354 7.47697C3.62354 9.28713 4.36211 10.9882 5.70317 12.2669C6.03005 12.5785 6.55927 12.5777 6.88525 12.2669C7.21169 11.9556 7.21163 11.451 6.88525 11.1398C5.85992 10.1622 5.29527 8.86137 5.29527 7.47702C5.29527 6.09267 5.85992 4.79185 6.88525 3.81429C7.21163 3.50298 7.21163 2.99832 6.88525 2.68706Z"
              fill="#1E3791"
              opacity="0.75"
            />
            <path
              d="M10.0524 3.97217C8.1189 3.97217 6.5459 5.54439 6.5459 7.47683C6.5459 9.40927 8.11895 10.9815 10.0524 10.9815C11.9859 10.9815 13.5589 9.40927 13.5589 7.47683C13.5589 5.54439 11.9859 3.97217 10.0524 3.97217Z"
              fill="#1E3791"
            />
          </svg>
          Ersten Sensor hinzufügen
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;
